--- a/index.html
+++ b/index.html
@@ -4,21 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My-Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-    <nav>
-        <div class="logo">Portfolio</div>
-        <div>
-            <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#internship">Internship</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#blog">Blogs</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
+    <div class="wrapper">
+<nav>
+    <div class="logo">
+        <a href="">Portfolio</a>
+    </div>
+    <ul>
+        <li><a href="#about" class="active">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#internships">Internships</a></li>
+        <li><a href="#blogs">Blogs</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+    <div class="toggle" onclick="toggleMenu();"><i class="fas fa-bars"></i></div>
+</nav>
+
+    </div>
+    <script type="text/javascript">
+        function toggleMenu(){
+            var manuToggle = document.querySelector('.toggle');
+            var ul=document.querySelector('ul');
+            ul.classList.toggle('active');
+        }
+    </script>
 </body>
 </html>
