--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-    <div class="wrapper">
+    <div>
 <nav>
-    <div class="logo">
-        <a href="">Portfolio</a>
-    </div>
+    <div class="logo">Portfolio</div>
     <ul>
         <li><a href="#about" class="active">About</a></li>
         <li><a href="#skills">Skills</a></li>
