--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#internships">Internships</a></li>
-        <li><a href="#blogs">Blogs</a></li>
+        <li><a href="#blog">Blog</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
     <div class="toggle" onclick="toggleMenu();"><i class="fas fa-bars"></i></div>
